@@ -8,6 +8,10 @@ USER LEVEL CHANGES
 
 -- New `nodes` argument added for the `addSampler` method of MCMC configuration objects.  Nodes specified in `nodes` automatically undergo expansion according to `expandNodeNames` prior to sampler assignment, allowing for easier assignment of samplers to multiple nodes.
 
+-- Addition of arguments `includePosteriorPred`, `posteriorPredOnly`, `includePosteriorPredBranch`, and `posteriorPredBranchOnly` arguments to `getNodeNames` and `getDependencies` methods of model objects.
+
+-- New system-level option `MCMCincludePredictiveDependencies` which controls whether MCMC samplers condition on posterior predictive nodes (and posterior predictive branch nodes) when calculating the acceptance probabilities of proposed transitions.  Default is FALSE.
+
 
                             CHANGES IN VERSION 0.12.2 (February 2022)
 
